// Copyright 2022 CS3203 Team14. All rights reserved.

#pragma once

class QueryEvaluator {};
